--- a/homepage_signed_in.html
+++ b/homepage_signed_in.html
@@ -7,8 +7,8 @@
     
     <title>CollaborART</title>
 
-    <!-- Bootstrap -->
-    <link href="/home/j36woods/Downloads/bootstrap-3.3.6-dist/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Boostrap -->
+    <link href="resources/bootstrap-3.3.6-dist/css/bootstrap.min.css" type="text/css" rel="stylesheet">
 
     <link href="webapp.css" rel="stylesheet">
 
@@ -127,6 +127,6 @@
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="/home/j36woods/Downloads/bootstrap-3.3.6-dist/js/bootstrap.min.js"></script>
+    <link href="resources/bootstrap-3.3.6-dist/js/bootstrap.min.css" type="text/css" rel="stylesheet">
   </body>
 </html>
