--- a/my_account.html
+++ b/my_account.html
@@ -8,7 +8,7 @@
     <title>My Account</title>
 
     <!-- Bootstrap -->
-    <link href="/home/j36woods/Downloads/bootstrap-3.3.6-dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="resources/bootstrap-3.3.6-dist/css/bootstrap.min.css" type="text/css" rel="stylesheet">
 
     <link href="webapp.css" rel="stylesheet">
 
@@ -144,6 +144,6 @@
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="/home/j36woods/Downloads/bootstrap-3.3.6-dist/js/bootstrap.min.js"></script>
+    <script src="resources/bootstrap-3.3.6-dist/js/bootstrap.min.js"></script>
   </body>
 </html>
