All icons and window exit alert

--- a/canvas.html
+++ b/canvas.html
@@ -90,10 +90,10 @@
       
       <div id="sharing" class="buttonContainer">
         <p>Share and collaborate!</p>
-        <button id="facebookBTN" class="tiny btn btn-default">
+        <button id="facebookBTN" class="tiny btn btn-primary">
           <img src="resources/images/FacebookIcon.png"></img>
         </button>
-        <button id="twitterBTN" class="tiny btn btn-default">
+        <button id="twitterBTN" class="tiny btn btn-info">
           <img src="resources/images/TwitterIcon.png"></img>
         </button>
         <button id="deviantartBTN" class="tiny btn btn-default">
@@ -114,17 +114,17 @@
       <button id="airbrushBTN" custom="" x="4" y="4"            class="tiny btn btn-default" data-toggle="tooltip" title="airbrush"></button>
       <button id="eraserBTN" custom="" x="4" y="4"              class="tiny btn btn-default" data-toggle="tooltip" title="eraser"></button>
       <button id="bucketBTN" custom="" x="1" y="26"             class="tiny btn btn-default" data-toggle="tooltip" title="fill"></button>
+      <button id="dropperBTN" custom="" x="0" y="22"            class="tiny btn btn-default" data-toggle="tooltip" title="dropper"></button>
       <button id="moveBTN" custom="" x="16" y="16"              class="tiny btn btn-default" data-toggle="tooltip" title="move"></button>
-      <button class="tiny btn btn-default"></button>
-      <button class="tiny btn btn-default"></button>
-      <button class="tiny btn btn-default"></button>
-      <button class="tiny btn btn-default"></button>
-      <button class="tiny btn btn-default"></button>
-      <button class="tiny btn btn-default"></button>
-      <button class="tiny btn btn-default"></button>
-      <button class="tiny btn btn-default"></button>
-      <button class="tiny btn btn-default"></button>
-      <button class="tiny btn btn-default"></button>
+      <button id="rotateBTN" custom="" x="4" y="4"              class="tiny btn btn-default" data-toggle="tooltip" title="rotate"></button>
+      <button id="scaleBTN" custom="" x="10" y="10"             class="tiny btn btn-default" data-toggle="tooltip" title="scale"></button>
+      <button id="skewBTN" custom="" x="13" y="5"               class="tiny btn btn-default" data-toggle="tooltip" title="skew"></button>
+      <button id="blurBTN" custom="" x="11" y="11"              class="tiny btn btn-default" data-toggle="tooltip" title="blur"></button>
+      <button id="smudgeBTN" custom="" x="14" y="15"            class="tiny btn btn-default" data-toggle="tooltip" title="smudge"></button>
+      <button id="gradientBTN" custom="" x="4" y="4"            class="tiny btn btn-default" data-toggle="tooltip" title="gradient"></button>
+      <button id="textBTN" custom="" x="4" y="4"                class="tiny btn btn-default" data-toggle="tooltip" title="text"></button>
+      <button id="panBTN" custom="" x="13" y="14"               class="tiny btn btn-default" data-toggle="tooltip" title="pan"></button>
+      <button id="zoomBTN" custom="" x="4" y="4"                class="tiny btn btn-default" data-toggle="tooltip" title="zoom"></button>
     </div>
     
     <canvas id="mainCanvas" width="1080" height="600"></canvas>
