--- a/canvas.html
+++ b/canvas.html
@@ -29,8 +29,12 @@
     <div id="topBar">
     
       <div id="navigation" class="buttonContainer">
-        <button id="homeBTN" class="square btn btn-info">Home</button>
-        <button id="accountBTN" class="rect btn btn-info">My Account<span class="glyphicon glyphicon-cog"></span></button>
+        <a href="homepage.html" target="_blank">
+          <button id="homeBTN" class="square btn btn-info">Home</button>
+        </a>
+        <a href="my_account.html" target="_blank">
+          <button id="accountBTN" class="rect btn btn-info">My Account<span class="glyphicon glyphicon-cog"></span></button>
+        </a>
         <button id="helpBTN" class="rect btn btn-info">Help<span class="glyphicon glyphicon-question-sign"></span></button>
       </div>
       
