--- a/homepage.html
+++ b/homepage.html
@@ -24,24 +24,24 @@
     <nav class="navbar navbar-fixed-top" id="shadow_nav">
       <div class="container-fluid">
         <div class="navbar-header">
-          <a class="navbar-brand" href="#">CollaborArt</a>
+          <a class="navbar-brand" href="homepage.html">CollaborArt</a>
         </div>
         <ul class="nav navbar-nav">
           <li class="active"><a href="homepage.html">Home</a></li>
-          <li><a href="#">Canvas</a></li>
+          <li><a href="canvas.html">Canvas</a></li>
           <li><a href="#">Help</a></li>
         </ul>
-        <ul class="nav navbar-nav navbar-right">
+        <!-- <ul class="nav navbar-nav navbar-right">
           <li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
           <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Log In</a></li>
-        </ul>
+        </ul> -->
       </div>
     </nav>
 
     <!-- Title and small description -->
     <div class="container">
       <div class="body">
-        <h1 style="color: #5557fe; font-family: 'Indie Flower'">CollaborART</h1>
+        <h1 style="color: #5557fe; font-family: 'Indie Flower'">CollaborArt</h1>
         <p class="lead" style="text-align:center; font-family: 'Fjalla One', sans-serif;">
           Welcome to the world of artful collaboration!<br>
           Connect with friends to create fun<br>
@@ -91,7 +91,7 @@
         <form class="form-horizontal" role="form">
           <div class="form-group">
             <div class="col-md-4 col-md-offset-4">
-              <a href="" class="btn btn-lg btn-warning btn-block">New Canvas</a>
+              <a href="canvas.html" class="btn btn-lg btn-warning btn-block">New Canvas</a>
             </div>
           </div>
         </form>
