--- a/homepage_signed_in.html
+++ b/homepage_signed_in.html
@@ -25,18 +25,18 @@
     <nav class="navbar navbar-fixed-top">
       <div class="container-fluid">
         <div class="navbar-header">
-          <a class="navbar-brand" href="#">CollaborArt</a>
+          <a class="navbar-brand" href="homepage.html">CollaborArt</a>
         </div>
         <ul class="nav navbar-nav">
           <li class="active"><a href="homepage.html">Home</a></li>
-          <li><a href="#">Canvas</a></li>
-          <li><a href="#">My Account</a></li> 
-          <li><a href="#">Manage Drawings</a></li> 
+          <li><a href="canvas.html">Canvas</a></li>
+          <li><a href="my_account.html">My Account</a></li> 
+          <li><a href="manage_drawings.html">Manage Drawings</a></li> 
           <li><a href="#">Help</a></li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
-          <li><a href="#"><span class="glyphicon glyphicon-user"></span> User1234</a></li>
-          <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Log Out</a></li>
+          <li><a href="my_account.html"><span class="glyphicon glyphicon-user"></span> User1234</a></li>
+          <li><a href="homepage.html"><span class="glyphicon glyphicon-log-in"></span> Log Out</a></li>
         </ul>
       </div>
     </nav>
@@ -56,24 +56,14 @@
         <div class="row">
           <form class="form-horizontal" role="form">
             <div class="form-group">
-              <div class="col-md-3 col-md-offset-3" >
-                <a href="" class="btn btn-lg btn-warning btn-block">New Canvas</a>
+              <div class="col-md-2 col-md-offset-3" >
+                <a href="canvas.html" class="btn btn-lg btn-warning btn-block">New Canvas</a>
               </div>
-              <div class="col-md-3" >
-                <a href="" class="btn btn-lg btn-primary btn-block">Manage Drawings</a>
+              <div class="col-md-2" >
+                <a href="manage_drawings.html" class="btn btn-lg btn-primary btn-block">Manage Drawings</a>
               </div>
-            </div>
-            <div class="form-group">
-              <div class="col-md-3 col-md-offset-3" >
+              <div class="col-md-2" >
                 <a href="my_account.html" class="btn btn-lg btn-success btn-block">My Account</a>
-              </div>
-              <div class="col-md-3" >
-                <a href="" class="btn btn-lg btn-info btn-block">Help</a>
-              </div>
-            </div>
-            <div class="form-group">
-              <div class="col-md-2 col-md-offset-5" >
-                <input type="log_out" class="btn btn-lg btn-default btn-block" value="Log Out">
               </div>
             </div>
           </form>
@@ -90,25 +80,25 @@
 
         <div class="col-lg-3 col-md-4 col-xs-6 thumb">
           <a class="thumbnail" href="#">
-              <img class="img-responsive" src="http://placehold.it/400x300" alt="">
+              <img class="img-responsive" src="https://upload.wikimedia.org/wikipedia/commons/0/0e/Zebra_street_art.jpg" alt="">
           </a>
         </div>
 
         <div class="col-lg-3 col-md-4 col-xs-6 thumb">
           <a class="thumbnail" href="#">
-              <img class="img-responsive" src="http://placehold.it/400x300" alt="">
+              <img class="img-responsive" src="https://static.pexels.com/photos/4337/art-flowers-dark-colorful.jpg" alt="">
           </a>
         </div>
 
         <div class="col-lg-3 col-md-4 col-xs-6 thumb">
           <a class="thumbnail" href="#">
-              <img class="img-responsive" src="http://placehold.it/400x300" alt="">
+              <img class="img-responsive" src="https://static.pexels.com/photos/1077/art-creative-apple-glass.jpg" alt="">
           </a>
         </div>
 
         <div class="col-lg-3 col-md-4 col-xs-6 thumb">
           <a class="thumbnail" href="#">
-              <img class="img-responsive" src="http://placehold.it/400x300" alt="">
+              <img class="img-responsive" src="http://www.publicdomainpictures.net/pictures/130000/nahled/fractal-wire-art-background.jpg" alt="">
           </a>
         </div>
       </div>
