Small changes to the thumbnails

--- a/manage_drawings.html
+++ b/manage_drawings.html
@@ -31,7 +31,7 @@
           <li class="active"><a href="homepage.html">Home</a></li>
           <li><a href="canvas.html">Canvas</a></li>
           <li><a href="my_account.html">My Account</a></li> 
-          <li class="active"><a href="#">Manage Drawings</a></li>
+          <li class="active"><a href="manage_drawings.html">Manage Drawings</a></li>
           <li><a href="#">Help</a></li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
@@ -94,27 +94,35 @@
           <!-- Projects Row -->
           <div class="row" style="padding-top:5%;">
               <div class="col-md-3 portfolio-item">
+                  <button class="delete_button_overlay glyphicon glyphicon-remove"></button>
+                  <button class="duplicate_button_overlay glyphicon glyphicon-duplicate"></button>
                   <a href="#">
-                      <img class="img-responsive" src="http://placehold.it/700x400" alt="">
-                      <h3><span>First Drawing</span></h3>
+                      <img class="img-responsive" src="https://upload.wikimedia.org/wikipedia/commons/0/0e/Zebra_street_art.jpg" alt="">
+                      <span class="drawing_label">Fifth Drawing</span>
                   </a>
               </div>
               <div class="col-md-3 portfolio-item">
+                  <button class="delete_button_overlay glyphicon glyphicon-remove"></button>
+                  <button class="duplicate_button_overlay glyphicon glyphicon-duplicate"></button>
                   <a href="#">
-                      <img class="img-responsive" src="http://placehold.it/700x400" alt="">
-                      <h3><span>Second Drawing</span></h3>
+                      <img class="img-responsive" src="https://static.pexels.com/photos/1077/art-creative-apple-glass.jpg" alt="">
+                      <span class="drawing_label">Sixth Drawing</span>
                   </a>
               </div>
               <div class="col-md-3 portfolio-item">
+                  <button class="delete_button_overlay glyphicon glyphicon-remove"></button>
+                  <button class="duplicate_button_overlay glyphicon glyphicon-duplicate"></button>
                   <a href="#">
-                      <img class="img-responsive" src="http://placehold.it/700x400" alt="">
-                      <h3><span>Third Drawing</span></h3>
+                      <img class="img-responsive" src="http://www.publicdomainpictures.net/pictures/130000/nahled/fractal-wire-art-background.jpg" alt="">
+                      <span class="drawing_label">Seventh Drawing</span>
                   </a>
               </div>
               <div class="col-md-3 portfolio-item">
+                  <button class="delete_button_overlay glyphicon glyphicon-remove"></button>
+                  <button class="duplicate_button_overlay glyphicon glyphicon-duplicate"></button>
                   <a href="#">
-                      <img class="img-responsive" src="http://placehold.it/700x400" alt="">
-                      <h3><span>Fourth Drawing</span></h3>
+                      <img class="img-responsive" src="https://static.pexels.com/photos/4337/art-flowers-dark-colorful.jpg" alt="">
+                      <span class="drawing_label">Eighth Drawing</span>
                   </a>
               </div>
           </div>
@@ -124,27 +132,35 @@
           <!-- Projects Row -->
           <div class="row" style="padding-top:5%;">
               <div class="col-md-3 portfolio-item">
+                  <button class="delete_button_overlay glyphicon glyphicon-remove"></button>
+                  <button class="duplicate_button_overlay glyphicon glyphicon-duplicate"></button>
                   <a href="#">
-                      <img class="img-responsive" src="http://placehold.it/700x400" alt="">
-                      <h3><span>First Drawing</span></h3>
+                      <img class="img-responsive" src="https://upload.wikimedia.org/wikipedia/commons/0/0e/Zebra_street_art.jpg" alt="">
+                      <span class="drawing_label">Ninth Drawing</span>
                   </a>
               </div>
               <div class="col-md-3 portfolio-item">
+                  <button class="delete_button_overlay glyphicon glyphicon-remove"></button>
+                  <button class="duplicate_button_overlay glyphicon glyphicon-duplicate"></button>
                   <a href="#">
-                      <img class="img-responsive" src="http://placehold.it/700x400" alt="">
-                      <h3><span>Second Drawing</span></h3>
+                      <img class="img-responsive" src="https://static.pexels.com/photos/1077/art-creative-apple-glass.jpg" alt="">
+                      <span class="drawing_label">Tenth Drawing</span>
                   </a>
               </div>
               <div class="col-md-3 portfolio-item">
+                  <button class="delete_button_overlay glyphicon glyphicon-remove"></button>
+                  <button class="duplicate_button_overlay glyphicon glyphicon-duplicate"></button>
                   <a href="#">
-                      <img class="img-responsive" src="http://placehold.it/700x400" alt="">
-                      <h3><span>Third Drawing</span></h3>
+                      <img class="img-responsive" src="http://www.publicdomainpictures.net/pictures/130000/nahled/fractal-wire-art-background.jpg" alt="">
+                      <span class="drawing_label">Eleventh Drawing</span>
                   </a>
               </div>
               <div class="col-md-3 portfolio-item">
+                  <button class="delete_button_overlay glyphicon glyphicon-remove"></button>
+                  <button class="duplicate_button_overlay glyphicon glyphicon-duplicate"></button>
                   <a href="#">
-                      <img class="img-responsive" src="http://placehold.it/700x400" alt="">
-                      <h3><span>Fourth Drawing</span></h3>
+                      <img class="img-responsive" src="https://static.pexels.com/photos/4337/art-flowers-dark-colorful.jpg" alt="">
+                      <span class="drawing_label">Twelfth Drawing</span>
                   </a>
               </div>
           </div>
