--- a/canvas.html
+++ b/canvas.html
@@ -133,7 +133,7 @@
     <div id="layersBar">
       <div id="layersBarHandle" pressed="0" class="handle"></div>
       <div id="layerOptions" class="form-group">
-        <input id="layerName" type="text" value="Layer 1" class="form-control"></input>
+        <input id="layerName" type="text" value="Layer_1" class="form-control"></input>
         <input id="layerOpacityNumber" type="number" min=0 max=100 value=100 class="form-control"></input>
         <input id="layerOpacitySlider" type="range" min=0 max=100 value=100 step=1></input>
         <select id="layerBlend" class="form-control">
@@ -147,12 +147,12 @@
       </div>
       <div id="layerList">
       
-        <div id="layer1" class="layer">
+        <div id="Layer_1" class="layer">
           <div class="btn-group-vertical">
             <button type="button" class="micro btn btn-default visibility" data-toggle="tooltip" title="show / hide"></button>
             <button type="button" class="micro btn btn-default lock" data-toggle="tooltip" title="lock layer"></button>
           </div>
-          <span class="nameArea">Layer 1</span>
+          <span class="nameArea">Layer_1</span>
           <div class="btn-group">
             <button type="button" class="nano btn btn-default new"    data-toggle="tooltip" title="new"></button>
             <button type="button" class="nano btn btn-default copy"   data-toggle="tooltip" title="copy"></button>
