--- a/homepage_registered.html
+++ b/homepage_registered.html
@@ -47,6 +47,7 @@
       <div class="container">
         <div class="body">
           <h1 style="color: #5557fe; font-family: 'Indie Flower'">CollaborArt</h1>
+          <p class="lead" style="text-align:center; font-family: 'Fjalla One', sans-serif; color: green">Registration Complete.</p>
           <p class="lead" style="text-align:center; font-family: 'Fjalla One', sans-serif;">Welcome, User1234!</p>
         </div>
       </div>
@@ -104,6 +105,11 @@
       </div>
     </div>
 
+
+
+
+
+    
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
