--- a/manage_drawings.html
+++ b/manage_drawings.html
@@ -11,7 +11,7 @@
     <link href="resources/bootstrap-3.3.6-dist/css/bootstrap.min.css" type="text/css" rel="stylesheet">
 
     <!-- Custom CSS File -->
-    <link href="webapp.css" rel="stylesheet">
+    <link href="./resources/webapp.css" rel="stylesheet">
 
     <!-- Google Fonts -->
     <link href='https://fonts.googleapis.com/css?family=Indie+Flower' rel='stylesheet' type='text/css'>
@@ -25,10 +25,10 @@
     <nav class="navbar navbar-fixed-top">
       <div class="container-fluid">
         <div class="navbar-header">
-          <a class="navbar-brand" href="homepage.html">CollaborArt</a>
+          <a class="navbar-brand" href="homepage_signed_in.html">CollaborArt</a>
         </div>
         <ul class="nav navbar-nav">
-          <li class="active"><a href="homepage.html">Home</a></li>
+          <li class="active"><a href="homepage_signed_in.html">Home</a></li>
           <li><a href="canvas.html">Canvas</a></li>
           <li><a href="my_account.html">My Account</a></li> 
           <li class="active"><a href="manage_drawings.html">Manage Drawings</a></li>
@@ -44,7 +44,7 @@
     <!-- <div class="canvas_text" style="background-size: 40% 100%;"> -->
 
     <!-- Recent Drawings -->
-    <div class="container thumbnail_grid" >
+    <div class="container thumbnail_grid">
       <div class="row">
         <div class="col-lg-12">
           <h1 class="page-header" style="color: #5557fe; font-family: 'Indie Flower', cursive;">Manage Drawings</h1>
@@ -58,34 +58,34 @@
               <div class="col-md-3 portfolio-item">
                   <button class="delete_button_overlay glyphicon glyphicon-remove"></button>
                   <button class="duplicate_button_overlay glyphicon glyphicon-duplicate"></button>
-                  <a href="#">
+                  <a href="canvas.html">
                       <img class="img-responsive" src="https://upload.wikimedia.org/wikipedia/commons/0/0e/Zebra_street_art.jpg" alt="">
-                      <span class="drawing_label">First Drawing</span>
                   </a>
+                  <span class="drawing_label" contenteditable="true">First Drawing</span>
               </div>
               <div class="col-md-3 portfolio-item">
                   <button class="delete_button_overlay glyphicon glyphicon-remove"></button>
                   <button class="duplicate_button_overlay glyphicon glyphicon-duplicate"></button>
-                  <a href="#">
+                  <a href="canvas.html">
                       <img class="img-responsive" src="https://static.pexels.com/photos/1077/art-creative-apple-glass.jpg" alt="">
-                      <span class="drawing_label">Second Drawing</span>
                   </a>
+                  <span class="drawing_label" contenteditable="true">Second Drawing</span>
               </div>
               <div class="col-md-3 portfolio-item">
                   <button class="delete_button_overlay glyphicon glyphicon-remove"></button>
                   <button class="duplicate_button_overlay glyphicon glyphicon-duplicate"></button>
-                  <a href="#">
+                  <a href="canvas.html">
                       <img class="img-responsive" src="http://www.publicdomainpictures.net/pictures/130000/nahled/fractal-wire-art-background.jpg" alt="">
-                      <span class="drawing_label">Third Drawing</span>
                   </a>
+                  <span class="drawing_label" contenteditable="true">Third Drawing</span>
               </div>
               <div class="col-md-3 portfolio-item">
                   <button class="delete_button_overlay glyphicon glyphicon-remove"></button>
                   <button class="duplicate_button_overlay glyphicon glyphicon-duplicate"></button>
-                  <a href="#">
+                  <a href="canvas.html">
                       <img class="img-responsive" src="https://static.pexels.com/photos/4337/art-flowers-dark-colorful.jpg" alt="">
-                      <span class="drawing_label">Fourth Drawing</span>
                   </a>
+                  <span class="drawing_label" contenteditable="true">Fourth Drawing</span>
               </div>
           </div>
           <!-- /.row -->
@@ -96,34 +96,33 @@
               <div class="col-md-3 portfolio-item">
                   <button class="delete_button_overlay glyphicon glyphicon-remove"></button>
                   <button class="duplicate_button_overlay glyphicon glyphicon-duplicate"></button>
-                  <a href="#">
+                  <a href="canvas.html">
                       <img class="img-responsive" src="https://upload.wikimedia.org/wikipedia/commons/0/0e/Zebra_street_art.jpg" alt="">
-                      <span class="drawing_label">Fifth Drawing</span>
-                  </a>
+                  <span class="drawing_label" contenteditable="true">Fifth Drawing</span>
               </div>
               <div class="col-md-3 portfolio-item">
                   <button class="delete_button_overlay glyphicon glyphicon-remove"></button>
                   <button class="duplicate_button_overlay glyphicon glyphicon-duplicate"></button>
-                  <a href="#">
+                  <a href="canvas.html">
                       <img class="img-responsive" src="https://static.pexels.com/photos/1077/art-creative-apple-glass.jpg" alt="">
-                      <span class="drawing_label">Sixth Drawing</span>
                   </a>
+                  <span class="drawing_label" contenteditable="true">Sixth Drawing</span>
               </div>
               <div class="col-md-3 portfolio-item">
                   <button class="delete_button_overlay glyphicon glyphicon-remove"></button>
                   <button class="duplicate_button_overlay glyphicon glyphicon-duplicate"></button>
-                  <a href="#">
+                  <a href="canvas.html">
                       <img class="img-responsive" src="http://www.publicdomainpictures.net/pictures/130000/nahled/fractal-wire-art-background.jpg" alt="">
-                      <span class="drawing_label">Seventh Drawing</span>
                   </a>
+                  <span class="drawing_label" contenteditable="true">Seventh Drawing</span>
               </div>
               <div class="col-md-3 portfolio-item">
                   <button class="delete_button_overlay glyphicon glyphicon-remove"></button>
                   <button class="duplicate_button_overlay glyphicon glyphicon-duplicate"></button>
-                  <a href="#">
+                  <a href="canvas.html">
                       <img class="img-responsive" src="https://static.pexels.com/photos/4337/art-flowers-dark-colorful.jpg" alt="">
-                      <span class="drawing_label">Eighth Drawing</span>
                   </a>
+                  <span class="drawing_label" contenteditable="true">Eighth Drawing</span>
               </div>
           </div>
           <!-- /.row -->
@@ -134,37 +133,12 @@
               <div class="col-md-3 portfolio-item">
                   <button class="delete_button_overlay glyphicon glyphicon-remove"></button>
                   <button class="duplicate_button_overlay glyphicon glyphicon-duplicate"></button>
-                  <a href="#">
+                  <a href="canvas.html">
                       <img class="img-responsive" src="https://upload.wikimedia.org/wikipedia/commons/0/0e/Zebra_street_art.jpg" alt="">
-                      <span class="drawing_label">Ninth Drawing</span>
                   </a>
-              </div>
-              <div class="col-md-3 portfolio-item">
-                  <button class="delete_button_overlay glyphicon glyphicon-remove"></button>
-                  <button class="duplicate_button_overlay glyphicon glyphicon-duplicate"></button>
-                  <a href="#">
-                      <img class="img-responsive" src="https://static.pexels.com/photos/1077/art-creative-apple-glass.jpg" alt="">
-                      <span class="drawing_label">Tenth Drawing</span>
-                  </a>
-              </div>
-              <div class="col-md-3 portfolio-item">
-                  <button class="delete_button_overlay glyphicon glyphicon-remove"></button>
-                  <button class="duplicate_button_overlay glyphicon glyphicon-duplicate"></button>
-                  <a href="#">
-                      <img class="img-responsive" src="http://www.publicdomainpictures.net/pictures/130000/nahled/fractal-wire-art-background.jpg" alt="">
-                      <span class="drawing_label">Eleventh Drawing</span>
-                  </a>
-              </div>
-              <div class="col-md-3 portfolio-item">
-                  <button class="delete_button_overlay glyphicon glyphicon-remove"></button>
-                  <button class="duplicate_button_overlay glyphicon glyphicon-duplicate"></button>
-                  <a href="#">
-                      <img class="img-responsive" src="https://static.pexels.com/photos/4337/art-flowers-dark-colorful.jpg" alt="">
-                      <span class="drawing_label">Twelfth Drawing</span>
-                  </a>
+                  <span class="drawing_label" contenteditable="true">Ninth Drawing</span>
               </div>
           </div>
-          <!-- /.row -->
         </div>
 
 
@@ -175,5 +149,37 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <link href="resources/bootstrap-3.3.6-dist/js/bootstrap.min.css" type="text/css" rel="stylesheet">
+
+    <script type="text/javascript">
+
+      var duplicate_buttons = document.getElementsByClassName('duplicate_button_overlay');
+      console.log(Array.isArray(duplicate_buttons))
+
+      for (var i=0; i < duplicate_buttons.length; i++) {
+        duplicate_buttons[i].onclick = function() {
+          console.log("Testing");
+          var thumbnail = this.parentElement;
+          var duplicate_thumbnail_name = thumbnail.childNodes[7].innerText + ' duplicate';
+          var cloned_thumbnail = thumbnail.cloneNode(true);
+          cloned_thumbnail.childNodes[7].innerText = duplicate_thumbnail_name;
+          thumbnail.parentElement.appendChild(cloned_thumbnail);
+        };
+      }
+
+
+      var delete_buttons = document.getElementsByClassName('delete_button_overlay');
+
+      for (var i=0; i < delete_buttons.length; i++) {
+        delete_buttons[i].onclick = function() {
+          var confirmation = confirm('Are you sure you want to delete this drawing?')
+
+          if (confirmation == true) {
+            var thumbnail = this.parentElement;
+            thumbnail.parentElement.removeChild(thumbnail);
+          }
+        };
+      }
+
+    </script>
   </body>
 </html>
