Small change to my_account, screenshots added

--- a/my_account.html
+++ b/my_account.html
@@ -147,6 +147,7 @@
         var old_password_input = document.createElement('input');
         old_password_input.className = 'form-control input-md';
         old_password_input.placeholder = 'Old Password';
+        old_password_input.type = 'password';
         old_password.appendChild(old_password_input);
         form_group.appendChild(old_password);
 
@@ -166,6 +167,7 @@
         var new_password_input = document.createElement('input');
         new_password_input.className = 'form-control input-md';
         new_password_input.placeholder = 'New Password';
+        new_password_input.type = 'password';
         new_password.appendChild(new_password_input);   
         form_group.appendChild(new_password);
 
@@ -176,6 +178,7 @@
         var confirm_new_password_input = document.createElement('input');
         confirm_new_password_input.className = 'form-control input-md';
         confirm_new_password_input.placeholder = 'Confirm New Password';
+        confirm_new_password_input.type = 'password';
         confirm_new_password.appendChild(confirm_new_password_input);  
         form_group.appendChild(confirm_new_password);
 
