Added smiley image to manage drawings page.  Fixed path issue in canvas

--- a/canvas.html
+++ b/canvas.html
@@ -15,7 +15,7 @@
     <!-- TinyColor -->
     <script src="resources/tinycolor.js"></script>
     
-    <!-- Custom Files ---> 
+    <!-- Custom Files --> 
     <link href="resources/canvasStyle.css" rel="stylesheet" type="text/css">
     <script src="resources/canvasDrawing.js" type="text/javascript"></script>
     <script src="resources/canvasLayers.js" type="text/javascript"></script>
@@ -28,7 +28,7 @@
     <div id="topBar">
     
       <div id="navigation" class="buttonContainer">
-        <a href="homepage.html">
+        <a href="homepage_signed_in.html">
           <button id="homeBTN" class="square btn btn-info"></button>
         </a>
         <a href="my_account.html">
