--- a/manage_drawings.html
+++ b/manage_drawings.html
@@ -134,9 +134,9 @@
                   <button class="delete_button_overlay glyphicon glyphicon-remove"></button>
                   <button class="duplicate_button_overlay glyphicon glyphicon-duplicate"></button>
                   <a href="canvas.html">
-                      <img class="img-responsive" src="https://upload.wikimedia.org/wikipedia/commons/0/0e/Zebra_street_art.jpg" alt="">
+                      <img class="img-responsive" src="https://image.freepik.com/free-icon/smiling-emoticon-square-face_318-58645.jpg" alt="">
                   </a>
-                  <span class="drawing_label" contenteditable="true">Ninth Drawing</span>
+                  <span class="drawing_label" contenteditable="true">Smiley Drawing</span>
               </div>
           </div>
         </div>
